fixing content overflow box 2

--- a/medis.css
+++ b/medis.css
@@ -69,7 +69,7 @@
 }
     
 }
-@media (max-width:330px) {
+@media (max-width:370px) {
     .box1{
         width: 250px;
         height: 400px;
